# OpenAIDuckDB

./: .gitignore  README.md  app.py  llama-duckdb.py  llm-duckdbengine.py  pyproject.toml
data/gym/: stretch_exercise_dataset.csv
